# PhotoCuller

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: deletion.rs  main.rs  photo_pair.rs  scanner.rs  viewer.rs
