[package]
name = "photo-culler-fuji"
version = "0.1.0"
edition = "2024"
description = "A high-performance photo culler for Fujifilm RAW+JPEG pairs"

[dependencies]
eframe = "0.29"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
rfd = "0.15"

[profile.release]
opt-level = 3
lto = true
